issue on mobile

--- a/public/less/theme/news.less
+++ b/public/less/theme/news.less
@@ -359,6 +359,7 @@ body .submit{
 	    .search-submit {
 		    bottom: 11px;
 		    font-size: 13px;
+		   
 			}
    		}
 	}
@@ -439,10 +440,10 @@ body .submit{
 	#page {
     margin: 0px !important;
 	}
-	.entry-title{
-		margin-top: 20px !important;
-		margin-bottom: 20px;
-	}
+	// .entry-title{
+	// 	margin-top: 20px !important;
+	// 	margin-bottom: 20px;
+	// }
 
 
 	.single-featured-image-header img {
@@ -540,6 +541,10 @@ body .submit{
 }
 
 @media screen and (max-width: @mobile){
+	 .search-submit {
+		   bottom: 0px !important;
+		   
+			}
 	.browse-cat{
 		&__list{
 			margin-top: 20px;
